--- a/templates/base.html
+++ b/templates/base.html
@@ -16,17 +16,17 @@
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
   <!-- 字体库 -->
-  <link rel="stylesheet" href="{% static 'plugins_bak/font-awesome/css/font-awesome.min.css' %}">
+  <link rel="stylesheet" href="{% static 'plugins/font-awesome/css/font-awesome.min.css' %}">
   <!-- 图标库 -->
-  <link rel="stylesheet" href="{% static 'plugins_bak/Ionicons/css/ionicons.min.css' %}">
+  <link rel="stylesheet" href="{% static 'plugins/Ionicons/css/ionicons.min.css' %}">
   <!-- 弹框库 -->
-  <link rel="stylesheet" href="{% static 'plugins_bak/alert/sweet-alert.css' %}">
+  <link rel="stylesheet" href="{% static 'plugins/alert/sweet-alert.css' %}">
   <!-- 表格库 -->
-  <link rel="stylesheet" href="{% static 'plugins_bak/footable/footable.core.css' %}">
+  <link rel="stylesheet" href="{% static 'plugins/footable/footable.core.css' %}">
   <!-- 选框库 -->
-  <link rel="stylesheet" href="{% static 'plugins_bak/select2/select2.min.css' %}">
+  <link rel="stylesheet" href="{% static 'plugins/select2/select2.min.css' %}">
   <!-- 时间库 -->
-  <link rel="stylesheet" href="{% static 'plugins_bak/timepicker/bootstrap-datepicker.min.css' %}">
+  <link rel="stylesheet" href="{% static 'plugins/timepicker/bootstrap-datepicker.min.css' %}">
 
   <!-- AdminLTE模版样式-->
   <link rel="stylesheet" href="{% static 'css/AdminLTE.min.css' %}">
@@ -272,22 +272,22 @@
 {#	<script src="http://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>#}
 
 <!-- ChartJS -->
-<script src="{% static 'plugins_bak/chart.js/Chart.min.js' %}"></script>
+<script src="{% static 'plugins/chart.js/Chart.min.js' %}"></script>
 <!-- alert -->
-<script src="{% static 'plugins_bak/alert/sweet-alert.min.js' %}"></script>
+<script src="{% static 'plugins/alert/sweet-alert.min.js' %}"></script>
 <!-- footable -->
-<script src='{% static 'plugins_bak/footable/footable.all.min.js' %}'></script>
+<script src='{% static 'plugins/footable/footable.all.min.js' %}'></script>
 <!-- datepicker -->
-<script src="{% static 'plugins_bak/timepicker/bootstrap-datepicker.js' %}"></script>
+<script src="{% static 'plugins/timepicker/bootstrap-datepicker.js' %}"></script>
 <!-- select2 -->
-<script src="{% static 'plugins_bak/select2/select2.full.min.js' %}"></script>
+<script src="{% static 'plugins/select2/select2.full.min.js' %}"></script>
 <!-- ace -->
-<script src="{% static 'plugins_bak/ace/ace.js' %}" type="text/javascript" charset="utf-8"></script>
-<script src="{% static 'plugins_bak/ace/ext-language_tools.js' %}" type="text/javascript" charset="utf-8"></script>
+<script src="{% static 'plugins/ace/ace.js' %}" type="text/javascript" charset="utf-8"></script>
+<script src="{% static 'plugins/ace/ext-language_tools.js' %}" type="text/javascript" charset="utf-8"></script>
 <!-- ace -->
-<script src="{% static 'plugins_bak/ladda/spin.min.js' %}"></script>
-<script src="{% static 'plugins_bak/ladda/ladda.min.js' %}"></script>
-<script src="{% static 'plugins_bak/ladda/ladda.jquery.min.js' %}"></script>
+<script src="{% static 'plugins/ladda/spin.min.js' %}"></script>
+<script src="{% static 'plugins/ladda/ladda.min.js' %}"></script>
+<script src="{% static 'plugins/ladda/ladda.jquery.min.js' %}"></script>
 
 <!-- AdminLTE App -->
 <script src="{% static 'js/adminlte.min.js' %}"></script>
